<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_device_update"
        android:icon="@mipmap/ic_update_light"
        android:title=""
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_device_status"
        android:title=""
        android:icon="@drawable/ic_bluetooth_disabled_grey_500_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_device_find"
        android:icon="@mipmap/ic_find"
        android:title="@string/find"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_device_rename"
        android:icon="@mipmap/ic_rename"
        android:title="@string/rename"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_device_modpsw"
        android:icon="@mipmap/ic_modify_psw"
        android:title="@string/modify_password"
        android:visible="false"
        app:showAsAction="never"/>

</menu>