<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_device_action"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_device_action_upgrade"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorCyan"
        android:padding="8dp"
        android:visibility="visible"
        android:textColor="@color/colorTextPrimaryDark"
        android:text="@string/item_action_upgrade"/>
    <TextView
        android:id="@+id/item_device_action_reset_psw"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorGray"
        android:padding="8dp"
        android:visibility="gone"
        android:textColor="@color/colorTextPrimaryDark"
        android:text="@string/retrieve_password"/>
    <TextView
        android:id="@+id/item_device_action_remove"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorRed"
        android:padding="8dp"
        android:textColor="@color/colorTextPrimaryDark"
        android:text="@string/remove"/>
</LinearLayout>