<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="8dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:hintTextAppearance="@style/TextHint"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/export_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DialogTheme"
            android:textSize="16sp"
            android:inputType="text"
            android:lines="1"
            android:hint="@string/profile_name"
            android:maxLength="18"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/export_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            style="@style/DialogButtonTheme"
            android:text="@string/cancel"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/export_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            style="@style/DialogButtonTheme"
            android:text="@string/save"
            android:textAllCaps="false"/>
    </android.support.v7.widget.ButtonBarLayout>
</LinearLayout>