<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        style="@style/DialogTheme"
        app:hintEnabled="true"
        android:hint="@string/hint_input_new_password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/modify_psw_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DialogTheme"
            android:maxLength="6"
            android:lines="1"
            android:inputType="numberPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        style="@style/DialogTheme"
        app:hintEnabled="true"
        android:hint="@string/hint_confirm_password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/modify_psw_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DialogTheme"
            android:maxLength="6"
            android:lines="1"
            android:inputType="numberPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:gravity="right">
        <Button
            android:id="@+id/modify_psw_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DialogTheme"
            android:textAllCaps="false"
            android:background="?attr/selectableItemBackground"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/modify_psw_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DialogTheme"
            android:textAllCaps="false"
            android:background="?attr/selectableItemBackground"
            android:text="@string/modify"/>
    </android.support.v7.widget.ButtonBarLayout>

</LinearLayout>