<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DialogTheme"
            android:inputType="textMultiLine"
            android:text="@string/tip_retrieve_password"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        app:hintTextAppearance="@style/TextHint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_retrieve_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/retrieve_key"
            style="@style/DialogTheme"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/dialog_retrieve_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DialogTheme"
        android:padding="8dp"
        android:gravity="center"/>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/dialog_retrieve_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_content_copy_black_32dp"
            android:background="?attr/selectableItemBackground"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/dialog_retrieve_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            style="@style/DialogButtonTheme"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/dialog_retrieve_retrieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            style="@style/DialogButtonTheme"
            android:text="@string/retrieve"/>
    </android.support.v7.widget.ButtonBarLayout>
</LinearLayout>