<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/rename_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/TextHint"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/rename_newname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DialogTheme"
            android:textSize="16sp"
            android:maxLength="18"
            android:lines="1"
            android:hint="@string/new_device_name"
            android:inputType="textCapSentences"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
        <Button
            android:id="@+id/rename_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DialogButtonTheme"
            android:textAllCaps="false"
            android:background="?attr/selectableItemBackground"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/rename_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DialogButtonTheme"
            android:textAllCaps="false"
            android:background="?attr/selectableItemBackground"
            android:text="@string/save"/>
    </android.support.v7.widget.ButtonBarLayout>
</LinearLayout>