<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        style="@style/DialogTheme"
        android:hint="@string/hint_input_password"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/psw_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DialogTheme"
            android:inputType="numberPassword"
            android:lines="1"
            android:maxLength="6"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/psw_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DialogTheme"
            android:background="?attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/psw_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DialogTheme"
            android:background="?attr/selectableItemBackground"
            android:text="@string/psw_login"
            android:textAllCaps="false"/>
    </android.support.v7.widget.ButtonBarLayout>

</LinearLayout>