<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ota_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        app:title="@string/ota_title"
        app:titleTextColor="@color/colorTextPrimaryDark"
        app:navigationIcon="@drawable/ic_chevron_left_white_36dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:srcCompat="@drawable/ic_update"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/ota_tv_device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/ota_tv_device_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/device_frimware_version"/>
            <TextView
                android:id="@+id/ota_tv_remote_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/latest_firmware_version"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textColor="#FFFF0000"
        android:textSize="12sp"
        android:text="@string/ota_warning"/>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/ota_nsv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/ota_tv_msg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="#FFFFFF"
            android:gravity="left"/>
    </android.support.v4.widget.NestedScrollView>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:orientation="horizontal">
        <!--<Button-->
            <!--android:id="@+id/ota_upgrade"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="8dp"-->
            <!--android:background="?android:attr/selectableItemBackground"-->
            <!--android:textAllCaps="false"-->
            <!--android:text="@string/ota_upgrade"/>-->
        <!--<Button-->
            <!--android:id="@+id/ota_download"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="8dp"-->
            <!--android:background="?android:attr/selectableItemBackground"-->
            <!--android:textAllCaps="false"-->
            <!--android:text="@string/ota_download"/>-->
        <Button
            android:id="@+id/ota_check_upgrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@drawable/shape_btn_corner_primary"
            android:drawablePadding="4dp"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimaryDark"
            android:text="@string/ota_check_upgrade"/>

    </android.support.v7.widget.ButtonBarLayout>
</LinearLayout>