<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="vertical"
        android:background="@mipmap/ic_turnoff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#55000000"
            android:gravity="center"
            android:orientation="horizontal">
            <Switch
                android:id="@+id/dialog_turnoff_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable"
                android:textColor="@color/colorTextPrimary"
                android:switchPadding="8dp"
                android:thumbTint="@color/selector_switch_thumb"
                android:trackTint="@color/selector_switch_track"
                android:layout_margin="8dp"/>
            <TimePicker
                android:id="@+id/dialog_turnoff_tmr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:timePickerMode="spinner"/>
        </LinearLayout>

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#55000000"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_turnoff_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_btn_corner_gray"
                android:layout_marginRight="16dp"
                android:textAllCaps="false"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/dialog_turnoff_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_btn_corner_primary"
                android:layout_marginLeft="16dp"
                android:textAllCaps="false"
                android:textColor="@color/selector_btn_enable_white_red"
                android:text="@string/save"/>
        </android.support.v7.widget.ButtonBarLayout>
    </LinearLayout>



</LinearLayout>